# web888-ha-bridge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  discover_api.py  docker-compose.yaml  hacs.json  parse_status.py  probe_admin.py  pyproject.toml  requirements.txt  requirements_dev.txt  test_client.py  web888-ha-bridge.py  web888_client.py
.github/: FUNDING.yml
.github/workflows/: hassfest.yml  ruff.yml
custom_components/web888/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  web888_client.py
custom_components/web888/translations/: en.json
docs/: dashboard-generator.html
docs/wiki/: Dashboard-Examples.md  Home.md  Sensor-Reference.md  Troubleshooting.md
examples/: entities-card.yaml  ft8-monitoring.yaml  glance-card.yaml  history-graph.yaml
